--- a/Week5-Temporal/temporal_assignment.Rmd
+++ b/Week5-Temporal/temporal_assignment.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment: Temporal Diversity"
-author: "Student Name; Z620: Quantitative Biodiversity, Indiana University"
+author: "Erik Parker; Z620: Quantitative Biodiversity, Indiana University"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: pdf_document
 geometry: margin=2.54cm
@@ -42,8 +42,18 @@ In the R code chunk below, provide the code to:
 
 ```{r}
 
+rm(list=ls())
+getwd()
+setwd()
 
-
+package.list <- c('vegan', 'tidyr', 'dplyr', 'codyn', 'ggplot2',
+'cowplot', 'MullerPlot', 'RColorBrewer', 'reshape2', 'lubridate',
+'TTR', 'xtable', 'multcomp', 'pander', 'png', 'grid', 'tseries', 'nlme', 'forecast', 'lsmeans')
+for (package in package.list) {
+if (!require(package, character.only = TRUE, quietly = TRUE)) {
+install.packages(package, repos='http://cran.us.r-project.org')
+library(package, character.only = TRUE) }
+}
 
 ```
 
@@ -56,8 +66,12 @@ In the R code chunk below, do the following:
 
 ```{r}
 
+portal <- read.table("data/combined.csv", sep = ",", header = TRUE)
 
+min(portal$plot_id)
+max(portal$plot_id)
 
+str(portal$species_id)
 
 ```
 
@@ -67,7 +81,10 @@ a.  How many plots are in `portal`?
 b.  How many rodent species are there in the `portal` dataset?
 
 > ***Answer 1a***:  
+> There are 24 plots in the portal dataset.
+
 > ***Answer 1b***:  
+> There are 48 distinct rodent species in the portal dataset.
 
 ## 3) WRANGLING THE PORTAL DATASET
 
@@ -80,6 +97,10 @@ In the R code chunk below, do the following:
 5. Using the hypothesis testing tools you learned in the beta-diversity module, test the hypothesis that species abundances across sites vary as a factor of treatment type (i.e., plot_type). 
 
 ```{r}
+
+year1985.only <- filter(portal, year == 1985)
+spread(data = year1985.only, key = species_id)
+species.1985 <- spread(data = year1985.only, key = species_id)
 
 ```
 
@@ -102,6 +123,12 @@ In the R code chunk below, do the following:
 6. Use the tools outlined in the Handout to create an ARMA model.
 
 ```{r}
+
+portal <- unite(portal, col = date, c(year, month, day), sep = "-", remove = FALSE)
+portal <- unite(portal, col = taxon, c(genus, species), sep = "_", remove = FALSE)
+
+
+
 
 ```
 
